# rules_debian_packages

./: .bazelignore  .dazel_run  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  internal_deps.bzl  renovate.json
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
apt/: BUILD.bazel  defs.bzl  extensions.bzl
apt/private/: BUILD.bazel  LAYER_BUILD.template.bazel  REPO_BUILD.template.bazel  lockfile.bzl  packages.template.bzl  repository.bzl  utils.bzl
apt/private/lockfile_generator/: BUILD.bazel  __main__.py  config.py  deb.py  lockfile.py  package.py  package_index.py  snapshots.py
apt/tests/: versions_test.bzl
debian_packages/: BUILD.bazel  defs.bzl  deps.bzl  extensions.bzl  lockfile.bzl  repositories.bzl  repository.bzl  toolchain.bzl
debian_packages/generate_bazelfiles/: BUILD.bazel  __init__.py  __main__.py
debian_packages/generate_lockfile/: BUILD.bazel  __init__.py  __main__.py  config.py  deb.py  lockfile.py  snapshots.py
debian_packages/private/: BUILD.bazel  lockfile.bzl  repository.build.tmpl  repository.bzl  repository.packages.tmpl  repository.workspace.tmpl  resolved_toolchain.bzl  toolchains_repo.bzl  utils.bzl
debian_packages/private/bzlmod/: repository.bzl  repository.packages.tmpl
debian_packages/private/lockfile_generator/: BUILD.bazel  __main__.py  config.py  deb.py  lockfile.py  snapshots.py
debian_packages/tests/: versions_test.bzl
docs/: BUILD.bazel  lockfile.md  packages_yaml.md  repository.md  rules.md  snapshots_yaml.md
e2e/smoke/: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  debian-packages.yaml  debian-snapshots.yaml  test.yaml  ubuntu-packages-universe.yaml  ubuntu-packages.yaml  ubuntu-snapshots.yaml
examples/bzlmod/: BUILD.bazel  MODULE.bazel  packages.yaml
examples/python_base_image/: BUILD.bazel  README.md  WORKSPACE.bazel  packages.yaml  snapshots.yaml
examples/rules_docker/: BUILD.bazel  README.md  WORKSPACE.bazel
examples/rules_oci/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  packages.yaml  snapshots.yaml
