workspace(name = "rules_debian_packages")

load("//debian_packages:repositories.bzl", "rules_debian_packages_repositories")

rules_debian_packages_repositories()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python",
    python_version = "3.9",
)

load("@python//:defs.bzl", "interpreter")
load("@rules_python//python:pip.bzl", "pip_parse")

# This repository isn't referenced, except by our test that asserts the requirements.bzl is updated.
# It also wouldn't be needed by users of this ruleset.
pip_parse(
    name = "pip_rules_debian_packages",
    python_interpreter_target = interpreter,
    requirements_lock = "//third_party:requirements.txt",
)

load("//third_party:requirements.bzl", "install_deps")
install_deps()
