workspace(name = "rules_debian_packages")

# Fetch deps needed only locally for development
load(":internal_deps.bzl", "rules_debian_packages_internal_deps")

rules_debian_packages_internal_deps()

load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python",
    python_version = "3.10",
)

load("@python//:defs.bzl", python_interpreter = "interpreter")
load("@rules_python//python/pip_install:repositories.bzl", "pip_install_dependencies")

pip_install_dependencies()

# Fetch dependencies which users need as well
load("//debian_packages:repositories.bzl", "rules_debian_packages_dependencies")

rules_debian_packages_dependencies(python_interpreter_target = python_interpreter)

# This pip_parse repo is only used to generate the debian_packages/private/third_party/requirements.bzl
load("@rules_python//python:pip.bzl", "pip_parse")

pip_parse(
    name = "rules_debian_packages_pypi_deps",
    requirements_lock = "//debian_packages/private/third_party:requirements.txt",
)

# For running our own unit tests
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")

bazel_skylib_workspace()
