# This load statement must be in the docs/ package rather than anything users depend on
# so that the dependency on stardoc doesn't leak to them.
load("@aspect_bazel_lib//lib:docs.bzl", "stardoc_with_diff_test", "update_docs")

stardoc_with_diff_test(
    name = "lockfile",
    bzl_library_target = "//debian_packages:defs",
    symbol_names = [
        "debian_packages_lockfile",
    ],
)

stardoc_with_diff_test(
    name = "repository",
    bzl_library_target = "//debian_packages:defs",
    symbol_names = [
        "debian_packages_repository",
    ],
)

update_docs(name = "update")
