load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    [
        "lockfile.bzl",
        "repository.bzl",
    ],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "debian_packages_lockfile",
    srcs = ["lockfile.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@bazel_skylib//rules:write_file",
    ],
)

bzl_library(
    name = "debian_packages_repository",
    srcs = ["repository.bzl"],
    visibility = ["//:__subpackages__"],
)

bzl_library(
    name = "utils",
    srcs = ["utils.bzl"],
    visibility = ["//debian_packages:__subpackages__"],
)
