# Override http_archive for local testing
local_repository(
    name = "rules_debian_packages",
    path = "../..",
)

load("@rules_debian_packages//:internal_deps.bzl", "rules_debian_packages_internal_deps")

rules_debian_packages_internal_deps()

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_debian_packages setup #
######################
# Fetches the rules_debian_packages dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_python//python:repositories.bzl", "py_repositories", "python_register_toolchains")

py_repositories()

python_register_toolchains(
    name = "python",
    python_version = "3.10",
)

load("@python//:defs.bzl", python_interpreter = "interpreter")
load("@rules_debian_packages//debian_packages:repositories.bzl", "rules_debian_packages_dependencies")

rules_debian_packages_dependencies(python_interpreter_target = python_interpreter)
