load("@rules_apt_pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(["__main__.py"])

py_binary(
    name = "binary",
    srcs = glob(["**/*.py"]),
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("dataclass-wizard"),
        requirement("networkx"),
        requirement("python-debian"),
        requirement("requests"),
        requirement("typing_extensions"),
    ],
)
